fix spacing

--- a/src/Components/PDF-Section/PDFSection.css
+++ b/src/Components/PDF-Section/PDFSection.css
@@ -1,10 +1,6 @@
 body {
     margin: 0;
     background-color: #525659;
-    font-family:
-      Segoe UI,
-      Tahoma,
-      sans-serif;
   }
   
   .Example input,
@@ -15,7 +11,6 @@ body {
   .Example header {
     background-color: #323639;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
-    padding: 20px;
     color: white;
   }
   
@@ -28,19 +23,15 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 10px 0;
-    padding: 10px;
   }
   
   .Example__container__load {
-    margin-top: 1em;
     color: white;
   }
   
   .Example__container__document {
     width: 100%;
     max-width: calc(100% - 2em);
-    margin: 1em 0;
   }
   
   .Example__container__document .react-pdf__Document {
@@ -50,11 +41,9 @@ body {
   }
   
   .Example__container__document .react-pdf__Page {
-    margin: 1em 0;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
   }
   
   .Example__container__document .react-pdf__message {
-    padding: 20px;
     color: white;
   }
